--- a/src/main/resources/com/foilen/infra/resource/apachephp/php.ini
+++ b/src/main/resources/com/foilen/infra/resource/apachephp/php.ini
@@ -1,2 +1,2 @@
 [PHP]
-sendmail_path = "/usr/bin/msmtp -C /etc/msmtprc -t --read-envelope-from"
+sendmail_path = "/usr/bin/msmtp -t --read-envelope-from"
