--- a/src/main/resources/com/foilen/infra/resource/apachephp/php.ini
+++ b/src/main/resources/com/foilen/infra/resource/apachephp/php.ini
@@ -1,2 +1,8 @@
 [PHP]
 sendmail_path = "/usr/bin/msmtp -t --read-envelope-from"
+
+max_execution_time = 300
+
+upload_max_filesize = 64M
+post_max_size = 128M
+memory_limit = 256M
